--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.5+3
+  firebase_auth: ^3.7.0
+  cloud_firestore: ^3.4.6
+  firebase_storage: ^10.3.7
+  firebase_core: ^1.21.1
+  shared_preferences: ^2.0.15
+  permission_handler: ^10.0.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
